--- a/app/globals.css
+++ b/app/globals.css
@@ -8,13 +8,14 @@ body{
   background-attachment: fixed;
 }
 .app-bg{
+  width: 100vw;
   display: flex;
+  padding: 2em;
   flex-direction: column-reverse;
   height: 75vh;
   box-shadow: 0 -100px 100px -10px #000000 inset;
 }
 .app-profile{
-  transform: translateY(-20px);
   font-weight: 500;
   padding: 1em;
   font-size: small;
@@ -34,11 +35,13 @@ body{
 .app-data{
   background-color: #28333A;
   height: 1000px;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-  transform: translateY(-20px);
+  width: 100vw;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
   padding: 2em;
   padding-top: 10px;
+  position: absolute;
+  top: 80vh;
 }
 .pill{
   width: 50px;
