--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@ body{
   padding: 0;
   background-image: url("../public/assets/bg.png");
   background-repeat: no-repeat;
-  background-size: cover;
+  /* background-size: cover; */
   color: white;
   background-attachment: fixed;
 }
@@ -16,7 +16,7 @@ body{
   box-shadow: 0 -100px 100px -10px #000000 inset;
 }
 .app-profile{
-  font-weight: 500;
+  font-weight: 700;
   padding: 1em;
   font-size: small;
 }
